--- a/src/components/less/base.less
+++ b/src/components/less/base.less
@@ -433,3 +433,32 @@ body{
 		}
 	}
 }
+
+//-------------------------------------
+// container : panel && window
+//-------------------------------------
+.wse-ui-panel,
+.wse-ui-window{
+
+	border-radius: 5px;
+	box-shadow: 0px 1px 2px black;
+
+	.wse-panel-header{
+		.linear-gradient-top(#3f3f3f, rgba(255,255,255,0.1), 0%, rgba(255,255,255,0.0), 99%);
+		border-top: 1px solid #626262;
+		color:#919191;
+		line-height: 25px;
+
+		border-radius: 5px 5px 0px 0px;
+
+		box-shadow: 0px 1px 1px black;
+	}
+	.wse-panel-title{
+		margin-left: 10px;
+	}
+
+	.wse-panel-body{
+		padding: 10px;
+		background-color: #2D2D2F;
+	}
+}
