--- a/src/components/less/base.less
+++ b/src/components/less/base.less
@@ -177,9 +177,15 @@ body{
 	height:25px;
 	position: relative;
 
+	.wse-range-groove-box{
+		float: left;
+		width:100%;
+	}
+	.wse-range-groove-outer{
+		padding: 0px 7px;
+	}
 	.wse-range-groove{
 
-		float: left;
 		background-color: #030303;
 		box-shadow: 0px 0px 1px black;
 		border-bottom: 1px solid #3D3D3D;
@@ -497,7 +503,6 @@ body{
 
 	&>.wse-tab-header{
 		overflow: hidden;
-		margin-left: -1px;
 
 		&>.wse-tab-tabs{
 
@@ -541,6 +546,7 @@ body{
 		padding: 10px;
 		background-color: #323234;
 		border-radius: 0px 0px 5px 5px;
-		box-shadow: 0px 0px 2px black;
+		border:1px solid #1B1B1B;
+		border-top: none;
 	}
 }
