rename the project, a new start！

--- a/src/components/less/base.less
+++ b/src/components/less/base.less
@@ -711,3 +711,13 @@ body{
 		}
 	}
 }
+
+//-------------------------------------
+// container : Inline
+//-------------------------------------
+.wse-ui-inline{
+
+	.wse-children>div{
+		float:left;
+	}
+}
