--- a/src/components/less/base.less
+++ b/src/components/less/base.less
@@ -13,8 +13,8 @@ body{
 // normal : 30px height
 // small : 20px height 
 //-------------------------------------
-.wse-ui-button,
-.wse-common-button{
+.qpf-ui-button,
+.qpf-common-button{
 	border:none;
 	border-radius: 3px;
 	box-shadow: 0px 1px 3px black;
@@ -53,14 +53,14 @@ body{
 //-------------------------------------
 // meta : label
 //-------------------------------------
-.wse-ui-label{
+.qpf-ui-label{
 	color : white;
 }
 
 //-------------------------------------
 // meta : textfield
 //-------------------------------------
-.wse-ui-textfield{
+.qpf-ui-textfield{
 
 	background-color: #111111;
 	border-radius: 3px;
@@ -91,7 +91,7 @@ body{
 //-------------------------------------
 // meta : checkbox
 //-------------------------------------
-.wse-ui-checkbox{
+.qpf-ui-checkbox{
 
 	cursor: pointer;
 
@@ -114,7 +114,7 @@ body{
 }
 
 //spinner
-.wse-ui-spinner{
+.qpf-ui-spinner{
 	
 	background-color: #111111;
 	border-radius: 3px;
@@ -122,7 +122,7 @@ body{
 	height:26px;
 	box-shadow: inset 0px 1px 3px black;
 
-	.wse-left{
+	.qpf-left{
 		
 		float:left;
 		input{
@@ -144,24 +144,24 @@ body{
 
 		}
 	}
-	.wse-right{
+	.qpf-right{
 		
 		float:right;
 
-		.wse-increase,
-		.wse-decrease{
+		.qpf-increase,
+		.qpf-decrease{
 			width:16px;
 			height:11px;
 			margin-top: 1px;
 			padding:0px;
 		}
 
-		.wse-increase{
+		.qpf-increase{
 			border-radius: 0px 3px 0px 0px;
 			line-height: 9px;
 			font-size: 12px;
 		}
-		.wse-decrease{
+		.qpf-decrease{
 			border-radius: 0px 0px 3px 0px;
 			line-height: 9px;
 			font-size: 16px;
@@ -172,18 +172,18 @@ body{
 //-------------------------------------
 // meta : range
 //-------------------------------------
-.wse-ui-range{
+.qpf-ui-range{
 	
 	height:25px;
 	position: relative;
 
-	.wse-range-groove-box{
+	.qpf-range-groove-box{
 		float: left;
 	}
-	.wse-range-groove-outer{
+	.qpf-range-groove-outer{
 		box-sizing: border-box;
 	}
-	.wse-range-groove{
+	.qpf-range-groove{
 
 		background-color: #030303;
 		box-shadow: 0px 0px 1px black;
@@ -192,14 +192,14 @@ body{
 		overflow: hidden;
 	}
 
-	.wse-range-percentage{
+	.qpf-range-percentage{
 		background-color: #4EADD5;
 		margin-top: 1px;
 		margin-left: 1px;
 		border-radius: 2px;
 	}
 
-	.wse-range-slider{
+	.qpf-range-slider{
 		width: 14px;
 		height: 14px;
 		position: absolute;
@@ -211,7 +211,7 @@ body{
 		box-sizing: border-box;
 		cursor: pointer;
 
-		.wse-range-value{
+		.qpf-range-value{
 			background-color: #464648;
 			color:#939395;
 			padding:2px 4px;
@@ -224,14 +224,14 @@ body{
 		}
 
 		&:hover{
-			.wse-range-value{
+			.qpf-range-value{
 				opacity: 1;
 				.transition-delay(0s);
 			}
 		}
 	}
 
-	.wse-range-slider-inner{
+	.qpf-range-slider-inner{
 		width: 8px;
 		height: 8px;
 		background-color: #1A1A1A;
@@ -240,12 +240,12 @@ body{
 		box-shadow: 0px 1px 1px #6B6A6A;
 	}
 
-	.wse-range-min{
+	.qpf-range-min{
 		position: absolute;
 		font-size: 12px;
 		color:#616161;
 	}
-	.wse-range-max{		
+	.qpf-range-max{		
 		position: absolute;
 		font-size: 12px;
 		color:#616161;
@@ -253,31 +253,31 @@ body{
 
 	// the slider is horizontal
 	&.horizontal{
-		.wse-range-groove-box{
+		.qpf-range-groove-box{
 			width:100%;
 		}
-		.wse-range-groove-outer{
+		.qpf-range-groove-outer{
 			padding: 0px 7px;
 		}
-		.wse-range-groove{
+		.qpf-range-groove{
 			width:100%;
 			height:3px;
 			margin-top: 15px;
 		}
-		.wse-range-percentage{
+		.qpf-range-percentage{
 			height: 2px;
 		}
-		.wse-range-min{
+		.qpf-range-min{
 			left:0px;
 			top:2px;
 		}
-		.wse-range-max{
+		.qpf-range-max{
 			right:0px;
 			top:2px;
 		}
-		.wse-range-slider{
+		.qpf-range-slider{
 			top:10px;
-			.wse-range-value{
+			.qpf-range-value{
 				bottom:-1px;
 				left:16px;
 			}
@@ -287,32 +287,32 @@ body{
 	// the slider is vertical
 	&.vertical{
 		height: 100%;
-		.wse-range-groove-box{
+		.qpf-range-groove-box{
 			height:100%;
 		}
-		.wse-range-groove-outer{
+		.qpf-range-groove-outer{
 			padding: 7px 0px;
 			height:100%;
 		}
-		.wse-range-groove{
+		.qpf-range-groove{
 			width:3px;
 			height:100%;
 			margin-left: 5px;
 		}
-		.wse-range-percentage{
+		.qpf-range-percentage{
 			height: 2px;
 		}
-		.wse-range-min{
+		.qpf-range-min{
 			left:15px;
 			top:0px;
 		}
-		.wse-range-max{
+		.qpf-range-max{
 			left:15px;
 			bottom:0px;
 		}
-		.wse-range-slider{
+		.qpf-range-slider{
 			top:10px;
-			.wse-range-value{
+			.qpf-range-value{
 				bottom:-1px;
 				left:16px;
 			}
@@ -323,13 +323,13 @@ body{
 //-------------------------------------
 // meta : combobox
 //-------------------------------------
-.wse-ui-combobox{
+.qpf-ui-combobox{
 
 	border-radius: 3px;
 	border: 1px solid #141414;
 	position: relative;
 
-	.wse-common-button{
+	.qpf-common-button{
 		box-shadow: none;
 		text-align: left;
 		padding: 0px 10px;
@@ -341,7 +341,7 @@ body{
 		}
 	}
 
-	ul.wse-combobox-items{
+	ul.qpf-combobox-items{
 		margin:0px;
 		padding: 0px;
 		display: none;
@@ -381,23 +381,23 @@ body{
 
 	&.active{
 		border-radius: 3px 3px 0px 0px;
-		.wse-common-button{
+		.qpf-common-button{
 			border-bottom: 1px solid #292929;
 			border-radius: 3px 3px 0px 0px;
 			color:#b5b5b5;
 		}
-		ul.wse-combobox-items{
+		ul.qpf-combobox-items{
 			display: block;
 		}
 	}
 
 	&.small{
-		.wse-common-button{
+		.qpf-common-button{
 			line-height: 20px;
 			padding: 0px 10px;
 			font-size: 12px;
 		}
-		ul.wse-combobox-items{
+		ul.qpf-combobox-items{
 			top:22px;
 			&>li{
 				line-height: 20px;
@@ -416,11 +416,11 @@ body{
 //-------------------------------------
 // widget : vector
 //-------------------------------------
-.wse-ui-vector{
+.qpf-ui-vector{
 
 	position: relative;
 
-	&>.wse-left{
+	&>.qpf-left{
 		position: absolute;
 		top: 5px;
 		bottom: 5px;
@@ -430,7 +430,7 @@ body{
 		cursor: pointer;
 	}
 
-	.wse-vector-link{
+	.qpf-vector-link{
 		border:1px solid #5F5F5F;
 		border-right:none;
 		border-radius: 3px 0px 0px 3px;
@@ -442,10 +442,10 @@ body{
 		background-size: 8px 8px;
 	}
 
-	&>.wse-right{
+	&>.qpf-right{
 		margin-left: 20px;
 
-		.wse-list{
+		.qpf-list{
 
 			margin:0px;
 			padding:0px;
@@ -457,8 +457,8 @@ body{
 		}
 	}
 
-	&.wse-vector-constrain{
-		.wse-vector-link{
+	&.qpf-vector-constrain{
+		.qpf-vector-link{
 			border-color:#4EADD5;
 			background-image: url(images/link-active.png);
 		}
@@ -468,21 +468,21 @@ body{
 //-------------------------------------
 // widget : palette
 //-------------------------------------
-.wse-ui-palette{
+.qpf-ui-palette{
 	width:350px;
 
-	.wse-palette-adjuster{
+	.qpf-palette-adjuster{
 
-		&>.wse-left{
+		&>.qpf-left{
 			float:left;
 			margin-top: 10px;
 		}
-		&>.wse-right{
+		&>.qpf-right{
 			float:left;
 			width:100px;
 			margin-left: 20px;
 
-			.wse-ui-spinner{
+			.qpf-ui-spinner{
 				input{
 					width:60px;
 				}
@@ -490,7 +490,7 @@ body{
 		}
 	}
 
-	.wse-palette-picksv{
+	.qpf-palette-picksv{
 		position: relative;
 		float:left;
 		width:200px;
@@ -498,17 +498,17 @@ body{
 
 		overflow: hidden;
 
-		.wse-palette-saturation{
+		.qpf-palette-saturation{
 			height:100%;
 			.linear-gradient-left(none, white, 0%, rgba(204, 154, 129, 0), 100%);
 		}
-		.wse-palette-value{
+		.qpf-palette-value{
 			height:100%;
 			.linear-gradient-top(none, rgba(204, 154, 129, 0), 0%, black, 100%);
 			
 			box-shadow: inset 0px 0px 5px black;
 		}
-		.wse-palette-picker{
+		.qpf-palette-picker{
 			width:8px;
 			height:8px;
 			border-radius: 5px;
@@ -518,7 +518,7 @@ body{
 			box-shadow: 0px 0px 3px black;
 		}
 	}
-	.wse-palette-pickh{
+	.qpf-palette-pickh{
 		position: relative;
 		float:left;
 		margin-left: 10px;
@@ -535,7 +535,7 @@ body{
 		box-shadow: inset 0px 0px 5px black;
 
 
-		.wse-palette-picker{
+		.qpf-palette-picker{
 			width:16px;
 			height:4px;
 			border-radius: 3px;
@@ -544,32 +544,32 @@ body{
 			box-shadow: 0px 0px 3px black;
 		}
 	}
-	.wse-palette-picker{
+	.qpf-palette-picker{
 		position: absolute;
 	}
 
-	.wse-ui-label{
+	.qpf-ui-label{
 		font-size: 12px;
 		color:#666666;
 	}
 
-	.wse-palette-hex{
+	.qpf-palette-hex{
 		&>div{
 			float: left;
 		}
 		input{
 			width:80px;
 		}
-		.wse-ui-label{
+		.qpf-ui-label{
 			margin:5px;
 		}
 	}
 
-	.wse-palette-alpha{
+	.qpf-palette-alpha{
 		margin-top: 5px;
 	}
 
-	.wse-palette-recent{
+	.qpf-palette-recent{
 		margin:10px 0px;
 		padding:0px;
 
@@ -597,7 +597,7 @@ body{
 			margin:-1px;
 		}
 	}
-	.wse-palette-buttons{
+	.qpf-palette-buttons{
 		&>div{
 			float:right;
 			margin:4px 6px;
@@ -608,14 +608,14 @@ body{
 //-------------------------------------
 // container : panel
 //-------------------------------------
-.wse-ui-panel{
+.qpf-ui-panel{
 
 	border-radius: 5px;
 	box-shadow: 0px 1px 2px black;
 	background-color: #323234;
 	position: relative;
 
-	&>.wse-panel-header{
+	&>.qpf-panel-header{
 		.linear-gradient-top(#3f3f3f, rgba(255,255,255,0.1), 0%, rgba(255,255,255,0.0), 99%);
 		border-top: 1px solid #626262;
 		color:#919191;
@@ -625,17 +625,17 @@ body{
 
 		box-shadow: 0px 1px 1px black;
 
-		&>.wse-panel-title{
+		&>.qpf-panel-title{
 			margin-left: 10px;
 		}
 
 	}
 
-	&>.wse-panel-body{
+	&>.qpf-panel-body{
 		padding: 10px;
 	}
 
-	&>.wse-panel-footer{
+	&>.qpf-panel-footer{
 		min-height: 5px;
 		border-radius: 0px 0px 5px 5px;
 	}
@@ -644,19 +644,19 @@ body{
 // container : Window
 //-------------------------------------
 
-.wse-ui-window{
+.qpf-ui-window{
 	position: absolute;
 }
 //-------------------------------------
 // container : Tab
 //-------------------------------------
-.wse-ui-tab{
+.qpf-ui-tab{
 
 
-	&>.wse-tab-header{
+	&>.qpf-tab-header{
 		overflow: hidden;
 
-		&>.wse-tab-tabs{
+		&>.qpf-tab-tabs{
 
 			margin: -1px -1px 0px -1px;
 			box-shadow: inset 0px 0px 1px black;
@@ -694,18 +694,18 @@ body{
 		}
 	}
 
-	&>.wse-tab-body{
+	&>.qpf-tab-body{
 		background-color: #323234;
 		border-radius: 0px 0px 5px 5px;
 		border:1px solid #1B1B1B;
 		border-top: none;
 
-		&>.wse-tab-views>.wse-ui-panel{
+		&>.qpf-tab-views>.qpf-ui-panel{
 			box-shadow: none;
-			&>.wse-panel-header{
+			&>.qpf-panel-header{
 				display: none;
 			}
-			&>.wse-panel-footer{
+			&>.qpf-panel-footer{
 				display: none;
 			}
 		}
@@ -715,9 +715,9 @@ body{
 //-------------------------------------
 // container : Inline
 //-------------------------------------
-.wse-ui-inline{
+.qpf-ui-inline{
 
-	.wse-children>div{
+	.qpf-children>div{
 		float:left;
 	}
 }
