--- a/src/components/less/base.less
+++ b/src/components/less/base.less
@@ -471,6 +471,25 @@ body{
 
 
 //-------------------------------------
+// meta : tree
+//-------------------------------------
+.qpf-ui-tree{
+	ul{
+		margin:0px;
+		padding: 0px;
+
+		li{
+			list-style: none;
+			line-height: 24px;
+		}
+	}
+	.qpf-tree-item-title{
+		cursor: pointer;
+		&:hover{
+		}
+	}
+}
+//-------------------------------------
 // widget : vector
 //-------------------------------------
 .qpf-ui-vector{
