Code review, update build, spinner support drag

--- a/src/style/naive.less
+++ b/src/style/naive.less
@@ -372,7 +372,7 @@ body {
 
         &>li {
             list-style: none;
-            border-bottom: 1px solid #565656;
+            border-bottom: 1px solid #383838;
             background-color: #2e302f;
             color:#8d8d8d;
 
@@ -732,7 +732,7 @@ body {
                 overflow: hidden;
 
                 &.actived {
-                    background-color: #323234;
+                    background-color: #2A2C2B;
                     border-bottom: none;
                     margin-top: -1px;
                     line-height: 25px;
