--- a/src/style/base.less
+++ b/src/style/base.less
@@ -52,6 +52,29 @@ body {
 }
 
 //-------------------------------------
+// meta : IconButton
+//-------------------------------------
+.qpf-ui-icon-button{
+    width: 30px;
+    height: 30px;
+    padding: 0px;
+
+    .qpf-icon{
+        background-size: 18px 18px;
+        width: 30px;
+        height: 30px;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+    }
+
+
+    &.small {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+//-------------------------------------
 // meta : label
 //-------------------------------------
 .qpf-ui-label {
