--- a/src/style/naive.less
+++ b/src/style/naive.less
@@ -9,7 +9,7 @@ body {
     font-size: 14px;
 }
 //-------------------------------------
-// meta : button
+// meta : Button
 // normal : 30px height
 // small : 20px height 
 //-------------------------------------
@@ -49,14 +49,37 @@ body {
 }
 
 //-------------------------------------
-// meta : label
+// meta : IconButton
+//-------------------------------------
+.qpf-ui-icon-button{
+    width: 30px;
+    height: 30px;
+    padding: 0px;
+
+    .qpf-icon{
+        background-size: 18px 18px;
+        width: 30px;
+        height: 30px;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+    }
+
+
+    &.small {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+//-------------------------------------
+// meta : Label
 //-------------------------------------
 .qpf-ui-label {
     color: #C0C0C0;
 }
 
 //-------------------------------------
-// meta : textfield
+// meta : TextField
 //-------------------------------------
 .qpf-ui-textfield {
 
@@ -87,7 +110,7 @@ body {
 }
 
 //-------------------------------------
-// meta : checkbox
+// meta : CheckBox
 //-------------------------------------
 .qpf-ui-checkbox {
 
@@ -112,7 +135,9 @@ body {
     }
 }
 
-//spinner
+//-------------------------------------
+// meta : Spinner
+//-------------------------------------
 .qpf-ui-spinner {
     
     background-color: #111111;
@@ -175,7 +200,7 @@ body {
 }
 
 //-------------------------------------
-// meta : slider
+// meta : Slider
 //-------------------------------------
 .qpf-ui-slider {
     
@@ -307,7 +332,7 @@ body {
 }
 
 //-------------------------------------
-// meta : combobox
+// meta : ComboBox
 //-------------------------------------
 .qpf-ui-combobox {
 
@@ -446,7 +471,7 @@ body {
 
 
 //-------------------------------------
-// meta : tree
+// meta : Tree
 //-------------------------------------
 .qpf-ui-tree{
     ul{
@@ -465,7 +490,7 @@ body {
     }
 }
 //-------------------------------------
-// widget : vector
+// widget : Vector
 //-------------------------------------
 .qpf-ui-vector{
 
@@ -517,7 +542,7 @@ body {
 }
 
 //-------------------------------------
-// widget : palette
+// widget : Palette
 //-------------------------------------
 .qpf-ui-palette{
     width:360px;
@@ -657,7 +682,7 @@ body {
 }
 
 //-------------------------------------
-// container : panel
+// container : Panel
 //-------------------------------------
 .qpf-ui-panel{
 
@@ -768,7 +793,6 @@ body {
 // container : Inline
 //-------------------------------------
 .qpf-ui-inline {
-
     .qpf-children>div {
         float:left;
     }
