--- a/src/style/base.less
+++ b/src/style/base.less
@@ -93,17 +93,17 @@ body {
 	box-shadow: inset 0px 1px 3px black;
 
 	input {
-		background:none;
-		border:none;
-		//default width
-		min-width:10px;
-		color:#b1b1b1;
-		float:left;
-		margin:0px;
+        background:none;
+        border:none;
+        //default width
+        min-width:10px;
+        color:#b1b1b1;
+        margin:0px;
 
-		line-height: 23px;
-		padding-left: 4px;
-		font-size: 14px;
+        line-height: 23px;
+        padding-left: 4px;
+        font-size: 14px;
+        width: 100%;
 
 		&:focus {
 			outline: none;
@@ -804,6 +804,6 @@ body {
 .qpf-ui-inline {
 
 	.qpf-children>div {
-		float:left;
+        display: inline-block;
 	}
 }
