--- a/src/style/naive.less
+++ b/src/style/naive.less
@@ -95,12 +95,12 @@ body {
         //default width
         min-width:10px;
         color:#b1b1b1;
-        float:left;
         margin:0px;
 
         line-height: 23px;
         padding-left: 4px;
         font-size: 14px;
+        width: 100%;
 
         &:focus {
             outline: none;
@@ -794,7 +794,7 @@ body {
 //-------------------------------------
 .qpf-ui-inline {
     .qpf-children>div {
-        float:left;
+        display: inline-block;
     }
 }
 
