--- a/src/style/naive.less
+++ b/src/style/naive.less
@@ -57,13 +57,12 @@ body {
     padding: 0px;
 
     .qpf-icon{
-        background-size: 18px 18px;
-        width: 30px;
-        height: 30px;
+        background-size: 70% 70%;
+        width: 100%;
+        height: 100%;
         background-position: 50% 50%;
         background-repeat: no-repeat;
     }
-
 
     &.small {
         width: 20px;
@@ -542,6 +541,32 @@ body {
 }
 
 //-------------------------------------
+// meta : Color
+//-------------------------------------
+.qpf-ui-color {
+    color:#666666;
+
+    .qpf-color-hex {
+        display: inline-block;
+        vertical-align: middle;
+
+        width: 50px;
+    }
+
+    .qpf-color-preview {
+        background-color: #000;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+        vertical-align: middle;
+        border-radius: 5px;
+        margin-left: 10px;
+        cursor: pointer;
+        border: 1px solid #666;
+    }
+}
+
+//-------------------------------------
 // widget : Palette
 //-------------------------------------
 .qpf-ui-palette{
@@ -795,6 +820,7 @@ body {
 .qpf-ui-inline {
     .qpf-children>div {
         display: inline-block;
+        vertical-align: middle;
     }
 }
 
