--- a/src/style/light.less
+++ b/src/style/light.less
@@ -15,6 +15,16 @@
 }
 
 .qpf-ui-tab {
+    .qpf-tab-body {
+        background-color: white;
+    }
+}
+
+.qpf-ui-checkbox {
+    color: #111;
+}
+
+.qpf-ui-tab {
     
     &>.qpf-tab-header {
 
